Bug 125936 - FILEOPEN DOCX: Wrong format for characters
Summary: FILEOPEN DOCX: Wrong format for characters
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:7.2.0 target:7.1.3 target:7.0.6
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Character
  Show dependency treegraph
 
Reported: 2019-06-15 11:19 UTC by Kevin Suo
Modified: 2021-03-26 16:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test DOCX file (24.99 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-06-15 11:19 UTC, Kevin Suo
Details
screenshot (159.77 KB, application/pdf)
2019-06-15 11:19 UTC, Kevin Suo
Details
test DOCX compared in MSO LO (90.99 KB, image/jpeg)
2019-06-17 09:44 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2019-06-15 11:19:16 UTC
Created attachment 152208 [details]
test DOCX file

Steps to Reproduce:
1. Open the attached test docx document in Writer.

Current Result:
See screenshot in PDF. the last character is shown down to the paragraph, and the content is this paragraph is not completely shown (due to row height?)

Expected:
See Word screenshot in PDF.
Comment 1 Kevin Suo 2019-06-15 11:19:56 UTC Comment hidden (obsolete)
Comment 2 Kevin Suo 2019-06-15 11:20:37 UTC Comment hidden (obsolete)
Comment 3 Timur 2019-06-17 09:44:49 UTC
Created attachment 152245 [details]
test DOCX compared in MSO LO

I repro with 6.4+. DOCX is MSO created. Issue remains if resaved in MSO.
Comment 5 Kevin Suo 2020-11-20 09:20:55 UTC
Bisected to the following commit:

commit: 5c20cc0202170508176da577662fb6daead312b0
author: Luboš Luňák <l.lunak@suse.cz> 2012-08-06 17:55:07 +0200
committer: Luboš Luňák <l.lunak@suse.cz> 2012-08-08 16:32:55 +0200

support for deferred property processing in writerfilter

Removing the following lines would make the test docx file look ok:
deferredCharacterProperties.clear();
...
if( pPropertyMap == m_pTopContext && !deferredCharacterProperties.empty() && (GetTopContextType() == CONTEXT_CHARACTER) )
        processDeferredCharacterProperties();

Adding cc to Luboš Luňák to cc: would you please take a look? Thanks.
Comment 6 Justin L 2021-03-23 10:42:49 UTC
proposed fix at https://gerrit.libreoffice.org/c/core/+/112982
Comment 7 Commit Notification 2021-03-23 14:44:40 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a7617653fb3d31e44e5cbcf8daf4b4c2a24e2c8

tdf#125936 writerfilter: treat escapement in numbering like styles

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2021-03-25 09:04:22 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/9436ab24a7d08540a7c192df86956d53673c9a08

tdf#125936 writerfilter: treat escapement in numbering like styles

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2021-03-26 15:58:05 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/adbfe9ee7a79eb81e4591f4b8c15d92044c7a07c

tdf#125936 writerfilter: treat escapement in numbering like styles

It will be available in 7.0.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.